--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -100,3 +100,17 @@ journal = {ArXiv e-prints}
   pages={182-197},
 
   doi={10.1109/4235.996017}}
+  
+  @inproceedings{zhang:15,
+  title={Deep Convolutional Network for Handwritten Chinese Character Recognition},
+  author={Yuhao Zhang},
+  year={2015}
+}
+
+@inproceedings{lamb:18,
+title	= {Deep Learning for Classical Japanese Literature},
+author	= {Alex Lamb and Asanobu Kitamoto and David Ha and Kazuaki Yamamoto and Mikel Bober-Irizar and Tarin Clanuwat},
+year	= {2018}
+}
+
+
